# site_testing

./: .build_cache  .gitignore  CMakeLists.txt  CNAME  DEPLOYMENT.md  INCREMENTAL_BUILDS.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_STATUS.md  Makefile  README.md  SEARCH_FEATURE.md  about.html  blogs-2.html  blogs.html  deploy.bat  movies.html  random.html  style.css  tech-2.html  tech.html
.github/: build-site.yml
.github/workflows/: build-site.yml  static.yml
blog/tech/: fastai_ch1.html  quic-protocol-optimizations.html  shortest_path_algorithms.html
cms/: index.html
content/: about.md  firstblog.md  index.md  projects.md  search.md
content/blog/: 02_production.ipynb  ai-streaming-infra.md  degree.md  firstblog.md  quantumblog.md  quic-protocol-optimizations.md  sample-post.md  (+5 more)
docs/: AI.html  CNAME  Eventful socialmedia.html  Thinking like a engineer.html  about.html  blogs-2.html  blogs-3.html  blogs.db  blogs.html  blogs.json  books.html  index.html  movies.html  projects.html  random.html  search.html  style.css  tech-2.html  tech.html
include/: blog_database.h  cache.h  category.h  content_tree.h  file_utils.h  jupyter_parser.h  listing.h  markdown_parser.h  metadata.h  navigation.h  processor.h  sidebar.h  structures.h  template.h  toc.h
output/: about.html  index.html  projects.html
scripts/: deploy.sh  new-post.bat  new-post.sh
src/: blog_database.cpp  cache.cpp  category.cpp  content_tree.cpp  file_utils.cpp  jupyter_parser.cpp  listing.cpp  main.cpp  markdown_parser.cpp  metadata.cpp  navigation.cpp  processor.cpp  sidebar.cpp  template.cpp  toc.cpp
templates/: search.js  style.css  template.html
(+39 files in other folders)
